When the viewport is set to mobile sizes, the support boxes were bleeding out of the container. Now a fixed width has been applied to the support-squares-container and with an overflow-y property value set to auto, to alleviate this issue.

--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,8 @@ main p {
 .support-squares-container {
     margin: 10px auto;
     text-align: center;
+    height: 500px;
+    overflow-y: auto;
 }
 
 .support-square {
